common-applications/test-environment/chatgpt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: chatgpt
  name: chatgpt
