common-applications/test-environment/chatgpt/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2
  name: oauth2-proxy
  namespace: chatgpt
spec:
  selector:
    matchLabels:
      app: oauth2
  template:
    metadata:
      labels:
        app: oauth2
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - args:
        - --provider=oidc
        - --email-domain=*
        - --upstream=http://chatgpt-service.chatgpt.svc.cluster.local
        - --http-address=0.0.0.0:4180
        - --provider-display-name=authing
        - --cookie-expire=12h0m0s
        - --redirect-url=https://chat.test.osinfra.cn/oauth2/callback
        # todo: update it to correct endpoint
        - --oidc-issuer-url=https://infra-chatgpt.authing.cn/oidc
        - --insecure-oidc-allow-unverified-email=true
        - --session-cookie-minimal=false
        - --pass-access-token=true
        - --cookie-secure=false
        - --pass-user-headers=true
        - --prefer-email-to-user=true
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:4b64a9c04a247dd5da3ff664d9d497c902324c3a
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2
  name: oauth2-proxy
  namespace: chatgpt
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    app: oauth2
