common-applications/test-environment/chatgpt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatgpt-service
  namespace: chatgpt
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: chatgpt-reverse
  type: ClusterIP
